// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Domain should call addCommunityDomain from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "domain": "domain",
  },
  "type": "CREATE_COMMUNITY_ADD_COMMUNITY_DOMAIN",
}
`;

exports[`Domain should call fetchCommunity from mapDispatchToProps 1`] = `
Object {
  "graphql": Object {
    "query": "
        query ($slug: String) {
          community (slug: $slug) {
            id
            slug
          }
        }
      ",
    "variables": Object {
      "slug": "Community Name",
    },
  },
  "meta": Object {
    "extractModel": "Community",
    "extractQueryResults": Object {
      "getItems": [Function],
    },
  },
  "type": "CREATE_COMMUNITY_FETCH_COMMUNITY",
}
`;

exports[`Domain should call goHome from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Domain should call goToNextStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-community/review",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Domain should call goToPreviousStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-community/name",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
